Slk chat errou como escreve prosseguir kkkkk

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Materias do técnico</title>
+  <title>Matérias do técnico</title>
   <style>
     /* Todo o estilo permanece o mesmo */
     body {
@@ -78,16 +78,16 @@
   <div class="botoes-wrapper">
     <!-- Botões da esquerda -->
     <div class="botoes-esquerda">
-      <button onclick="alterarConteudo('AMC', 'Matemática aplicada ao técnico')">AMC</button>
-      <button onclick="alterarConteudo('NR', 'Normas Regulamentadoras')">NR</button>
-      <button onclick="alterarConteudo('GT', 'Gestão Técnica')">GT</button>
+      <button onclick="alterarConteudo('AMC', 'Arquitetura e manutenção de computadores')">AMC</button>
+      <button onclick="alterarConteudo('NR', 'Noção de robôtica')">NR</button>
+      <button onclick="alterarConteudo('GT', 'Gestão de tempo')">GT</button>
       <button onclick="alterarConteudo('POO JAVA', 'Programação Orientada a Objetos com Java')">POO JAVA</button>
     </div>
 
     <!-- Container centralizado -->
     <div class="container">
-      <h1>Materias do técnico</h1>
-      <p>Selecione uma opção para proceguir</p>
+      <h1>Matérias do técnico</h1>
+      <p>Selecione uma opção para prosseguir</p>
     </div>
 
     <!-- Botões da direita -->
