--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       gap: 10px;
     }
 
-    .botoes button {
+    .botoesbutton {
       padding: 15px 30px;
       font-size: 18px;
       border: none;
@@ -61,7 +61,7 @@
       transition: background-color 0.3s, color 0.3s;
     }
 
-    .botoes button:hover {
+    .botoesbutton:hover {
       background-color: blue;
       color: white;
     }
@@ -109,10 +109,10 @@
   <div class="botoes-wrapper">
     <!-- Botões da esquerda -->
     <div class="botoes-esquerda">
-      <button onclick="alterarConteudo('AMC', 'Arquitetura e manutenção de computadores'); esconderLinks();">AMC</button>
-      <button onclick="alterarConteudo('NR', 'Noção de robôtica'); esconderLinks();">NR</button>
-      <button onclick="alterarConteudo('GT', 'Gestão de tempo'); esconderLinks();">GT</button>
-      <button onclick="alterarConteudo('POO JAVA', 'Programação Orientada a Objetos com Java'); esconderLinks();">POO JAVA</button>
+      <button class="botoesbutton" onclick="alterarConteudo('AMC', 'Arquitetura e manutenção de computadores'); esconderLinks();">AMC</button>
+      <button class="botoesbutton" onclick="alterarConteudo('NR', 'Noção de robôtica'); esconderLinks();">NR</button>
+      <button class="botoesbutton" onclick="alterarConteudo('GT', 'Gestão de tempo'); esconderLinks();">GT</button>
+      <button class="botoesbutton" onclick="alterarConteudo('POO JAVA', 'Programação Orientada a Objetos com Java'); esconderLinks();">POO JAVA</button>
     </div>
 
     <!-- Container centralizado -->
@@ -128,10 +128,10 @@
 
     <!-- Botões da direita -->
     <div class="botoes-direita">
-      <button onclick="alterarConteudo('PROG WEB', 'Programação para Web'); esconderLinks();">PROG WEB</button>
-      <button onclick="alterarConteudo('HTML CSS', 'Desenvolvimento com HTML e CSS'); esconderLinks();">HTML CSS</button>
-      <button onclick="alterarConteudo('LOG PR', 'Lógica de Programação'); esconderLinks();">LOG PR</button>
-      <button onclick="alterarConteudo('SO', 'Sistemas Operacionais'); esconderLinks();">SO</button>
+      <button class="botoesbutton" onclick="alterarConteudo('PROG WEB', 'Programação para Web'); esconderLinks();">PROG WEB</button>
+      <button class="botoesbutton" onclick="alterarConteudo('HTML CSS', 'Desenvolvimento com HTML e CSS'); esconderLinks();">HTML CSS</button>
+      <button class="botoesbutton" onclick="alterarConteudo('LOG PR', 'Lógica de Programação'); esconderLinks();">LOG PR</button>
+      <button class="botoesbutton" onclick="alterarConteudo('SO', 'Sistemas Operacionais'); esconderLinks();">SO</button>
     </div>
   </div>
 </body>
