Adicão de conteudo inglês.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,26 @@
       <!-- Conteúdos ocultos -->
       <div id="conteudo-amc" class="conteudo-aula">
         <h2>Detalhes AMC</h2>
-        <p>AMC ou arquitetura e manutenção de computadores é uma das matérias do técnico.</p>
+        <p>Termos comuns em inglês dos Computer (Computador)
+Boot up – inicializar o computador
+
+Hard drive – disco rígido
+
+Random Access Memory (RAM) – memória RAM
+
+Power supply – fonte de energia
+
+Graphics card – placa de vídeo
+
+Motherboard – placa-mãe
+
+Overheating issue – problema de superaquecimento
+
+Peripheral device – dispositivo periférico
+
+Keyboard shortcut – atalho de teclado
+
+USB port – porta USB</p>
       </div>
 
       <div id="conteudo-gt" class="conteudo-aula">
@@ -50,7 +69,26 @@
 
       <div id="conteudo-poo" class="conteudo-aula">
         <h2>Detalhes POO JAVA</h2>
-        <p>O projeto de POO JAVA encontra-se na pasta "java" do notebook.</p>
+        <p>Termos em inglês do Software (Programas)
+Bug fix – correção de erro
+
+User interface (UI) – interface do usuário
+
+Source code – código-fonte
+
+Software update – atualização de software
+
+Open source – código aberto
+
+Version control – controle de versão
+
+Software license – licença de software
+
+Patch release – versão de correção
+
+Beta version – versão beta
+
+Crash report – relatório de falha.</p>
       </div>
 
       <div id="conteudo-web" class="conteudo-aula">
@@ -70,7 +108,26 @@
 
       <div id="conteudo-so" class="conteudo-aula">
         <h2>Detalhes SO</h2>
-        <p>O Windows é o sistema operacional mais usado em PCs e notebooks.</p>
+        <p>Termos comuns em ingles no System (Sistema)
+Operating system (OS) – sistema operacional
+
+System crash – falha do sistema
+
+System update – atualização do sistema
+
+System requirements – requisitos do sistema
+
+System configuration – configuração do sistema
+
+System administrator (sysadmin) – administrador de sistemas
+
+File system – sistema de arquivos
+
+Security breach – violação de segurança
+
+System backup – backup do sistema
+
+System performance – desempenho do sistema</p>
       </div>
       
       <!-- Menu dos amigos (dentro do container) -->
