--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <button onclick="changeTheme('custom')">Personalizado</button>
     </div>
 
-    <div class="container">
+    <div class="container" id="container">
         <h1>Matérias do técnico</h1>
         <p>Selecione uma opção para prosseguir</p>
+
+        <!-- Link para MediaFire -->
+        <a href="https://www.mediafire.com/file/dpdakf8yfshb03p/Projeto_java.jar/file" target="_blank" id="mediafire-link" class="botao-conteudo">Baixar Materiais</a>
 
         <!-- Botões das matérias (superior) -->
         <div class="botoes-esquerda">
@@ -31,7 +34,7 @@
             <button class="botoesbutton" onclick="alterarConteudo('POO JAVA', 'Detalhes da POO JAVA', 'poo')">POO JAVA</button>
         </div>
 
-        <!-- Botões das matérias (inferior, agora funcionais) -->
+        <!-- Botões das matérias (inferior) -->
         <div class="botoes-direita">
             <button class="botoesbutton" onclick="alterarConteudo('PROG WEB', 'Detalhes de PROG WEB', 'progweb')">PROG WEB</button>
             <button class="botoesbutton" onclick="alterarConteudo('HTML CSS', 'Detalhes de HTML CSS', 'htmlcss')">HTML CSS</button>
